--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
 <body>
+    <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="checkbox">
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"></div>
+        </label>
+        <em>Dark Mode</em>
+    </div>
+
     <h1>Similar YT Channels Viewer</h1>
     <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)">
     
@@ -18,7 +26,6 @@
             <option value="ascending">Ascending</option>
             <option value="descending">Descending</option>
         </select>
-        <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
     </div>
 
     <div id="cards"></div>
