--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </label>
     </div>
 
-    <h1>Similar YT Channels Viewer</h1>
+    <h1>Similar YT Channels Viewer (upload CSV to start)</h1>
 
     <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)">
 
