--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)">
 
     <div id="filterContainer" style="display: none;">
-        <label for="sortOrder">  Sort by Subscribers:</label>
+        <label for="sortOrder">‎ Sort by Subscribers</label>
         <select id="sortOrder" onchange="applySorting()">
             <option value="none">None</option>
             <option value="ascending">Ascending</option>
