--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 
     <h1>Similar YT Channels Viewer (upload CSV to start)</h1>
 
-    <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)">
-
+    <div class="upload-container">
+            <label for="csvFileInput" class="file-input-label">
+                Upload CSV
+                <input type="file" id="csvFileInput" accept=".csv" />
+            </label>
+    </div>
+    
     <div id="filterContainer" style="display: none;">
         <label for="sortOrder">‎ Sort by Subscribers</label>
         <select id="sortOrder" onchange="applySorting()">
