--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <header>
     <div class="theme-switch-wrapper">
         <label class="theme-switch" for="checkbox">
             <input type="checkbox" id="checkbox" />
@@ -15,6 +17,8 @@
     </div>
 
     <h1>Similar YT Channels Viewer</h1>
+
+    </header>
 
     <div class="file-input-wrapper">
         <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)" />
