--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Similar YT Channels Viewer</title>
+    <title>YouTube Video Viewer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <div class="theme-switch-wrapper">
         <label class="theme-switch" for="checkbox">
             <input type="checkbox" id="checkbox" />
@@ -15,18 +14,27 @@
         </label>
     </div>
 
-    <h1>Similar YT Channels Viewer</h1>
+    <h1>YouTube Video Viewer</h1>
 
     <div class="file-input-wrapper">
-        <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)" />
-        <button class="file-input-button" onclick="document.getElementById('csvFileInput').click()">
-            Upload CSV
-        </button>
+        <label for="csvFileInput" class="file-input-button">Upload CSV</label>
+        <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)">
+    </div>
+
+    <div id="statsContainer" style="display: none;">
+        <p>Total Channels: <span id="totalChannels">0</span></p>
+        <p>Viewed: <span id="viewedChannels">0</span></p>
+        <p>Remaining: <span id="remainingChannels">0</span></p>
     </div>
 
     <div id="filterContainer" style="display: none;">
         <select id="sortOrder" onchange="applySorting()">
             <option value="none">Sort by Subscribers</option>
+            <option value="ascending">Ascending</option>
+            <option value="descending">Descending</option>
+        </select>
+        <select id="sortViews" onchange="applySorting()">
+            <option value="none">Sort by Views</option>
             <option value="ascending">Ascending</option>
             <option value="descending">Descending</option>
         </select>
