--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)">
     </div>
 
-    <div id="statsContainer" style="display: none;">
+    <div id="statisticsContainer" style="display: none;">
         <p>Total Channels: <span id="totalChannels">0</span></p>
         <p>Viewed: <span id="viewedChannels">0</span></p>
         <p>Remaining: <span id="remainingChannels">0</span></p>
@@ -30,11 +30,6 @@
     <div id="filterContainer" style="display: none;">
         <select id="sortOrder" onchange="applySorting()">
             <option value="none">Sort by Subscribers</option>
-            <option value="ascending">Ascending</option>
-            <option value="descending">Descending</option>
-        </select>
-        <select id="sortViews" onchange="applySorting()">
-            <option value="none">Sort by Views</option>
             <option value="ascending">Ascending</option>
             <option value="descending">Descending</option>
         </select>
