--- a/index.html
+++ b/index.html
@@ -3,75 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Similar YT Channel Viewer</title>
+    <link rel="icon" href="icon-192x192.png" type="image/png">
+    <link rel="shortcut icon" href="icon-192x192.png" type="image/png">
+    <link rel="apple-touch-icon" href="icon-192x192.png">
+    <title>YouTube Video Viewer</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- PapaParse for CSV handling -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
 <body>
-    <!-- Theme Switch -->
+    <div id="statisticsContainer" style="display: none;">
+        <p>Total Channels: <span id="totalChannels">0</span></p>
+        <p>Viewed: <span id="viewedChannels">0</span></p>
+        <p>Remaining: <span id="remainingChannels">0</span></p>
+    </div>
+    
     <div class="theme-switch-wrapper">
-        <label class="theme-switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
+        <label class="theme-switch" for="checkbox">
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"></div>
         </label>
     </div>
 
-    <!-- Statistics Container -->
-    <div id="statisticsContainer" style="display: none;">
-        <div>
-            <p>Total: <span id="totalChannels">0</span></p>
-        </div>
-        <div>
-            <p>Viewed: <span id="viewedChannels">0</span></p>
-        </div>
-        <div>
-            <p>Remaining: <span id="remainingChannels">0</span></p>
-        </div>
+    <h1>Similar YT Channel Viewer</h1>
+
+    <div class="file-input-wrapper">
+        <label for="csvFileInput" class="file-input-button">Upload CSV</label>
+        <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)">
     </div>
 
-    <!-- Main Content -->
-    <main>
-        <h1>Similar YT Channel Viewer</h1>
-
-        <!-- File Input Section -->
-        <div class="file-input-wrapper">
-            <input type="file" id="csvFileInput" accept=".csv" onchange="loadFile(event)" style="display: none;">
-            <button class="file-input-button" onclick="document.getElementById('csvFileInput').click()">
-                Upload CSV
-            </button>
-        </div>
-
-        <!-- Filter Container -->
-        <div id="filterContainer" style="display: none;">
-            <select id="sortOrder" onchange="applySorting()">
-                <option value="none">Sort by Subscribers</option>
-                <option value="ascending">Ascending</option>
-                <option value="descending">Descending</option>
-            </select>
-        </div>
-
-        <!-- Cards Container -->
-        <div id="cards"></div>
-    </main>
-
-    <!-- Progress Reset Button (Optional) -->
-    <div class="reset-container" style="margin-top: 20px; text-align: center;">
-        <button id="resetProgress" onclick="resetAllProgress()" class="reset-button" style="display: none;">
-            Reset Progress
-        </button>
+    <div id="filterContainer" style="display: none;">
+        <select id="sortOrder" onchange="applySorting()">
+            <option value="none">Sort by Subscribers</option>
+            <option value="ascending">Ascending</option>
+            <option value="descending">Descending</option>
+        </select>
     </div>
 
-    <!-- Loading Indicator -->
-    <div id="loadingIndicator" class="loading-indicator" style="display: none;">
-        <div class="spinner"></div>
-        <p>Processing...</p>
-    </div>
+    <div id="cards"></div>
 
-    <!-- Error Message Container -->
-    <div id="errorMessage" class="error-message" style="display: none;"></div>
-
-    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
