--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <div id="cards"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script type="module" src="src/script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
